@@ -155,6 +155,7 @@ Bugs Fixed:
 - 3441028 sblim-sfcb fails on large https requests
 - 3416054 Provider continues despite SIGSEGV
 - 3512425 SequenceContext needs to be set at startup
+- 3512094 SFCB can leak PAM handles under error conditions
 
 Changes in 1.3.13
 =================
