@@ -1,3 +1,8 @@
+2012-04-09  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* httpAdapter.c, sfcBasicPAMAuthentication.c:
+	[ 3512094 ] SFCB can leak PAM handles under error conditions
+
 2012-04-05  Narasimha Sharoff  <nsharoff@us.ibm.com>
 
 	* control.c:
